<resources>
    <string name="app_name">Matteapp</string>
    <string name="start">Start</string>
    <string name="preferanser">Preferanser</string>
    <string name="statistikk">Statistikk</string>
    <string name="valgSpill">velg antall regnstykker</string>
    <string name="femRegnstykker">5 regnstykker</string>
    <string name="tiRegnstykker">10 regnstykker</string>
    <string name="tjuefemRegnstykker">25 regnstykker</string>
    <string name="nul">0</string>
    <string name="en">1</string>
    <string name="to">2</string>
    <string name="tre">3</string>
    <string name="fire">4</string>
    <string name="fem">5</string>
    <string name="seks">6</string>
    <string name="syv">7</string>
    <string name="aatte">8</string>
    <string name="ni">9</string>
    <string name="regn">Regn</string>
    <string name="valgSpillB">Velg</string>
    <string name="visPoeng">Poeng</string>
    <string name="visStatistisk">Statistisk</string>
    <string-array name="quiz_array">
        <item>1+1=2</item>
        <item>10+1=11</item>
        <item>12+13=25</item>
        <item>9+2=11</item>
        <item>3+4=7</item>
        <item>9+5=14</item>
        <item>2+2=4</item>
        <item>5+1=6</item>
        <item>4+1=5</item>
        <item>7+7=14</item>
        <item>1+2=3</item>
        <item>7+1=8</item>
        <item>0+5=5</item>
        <item>10+4=14</item>
        <item>5+12=17</item>
        <item>7+4=11</item>
        <item>6+12=18</item>
        <item>3+13=16</item>
        <item>2+6=8</item>
        <item>11+12=23</item>
        <item>6+14=20</item>
        <item>7+12=19</item>
        <item>8+8=16</item>
        <item>12+12=24</item>
        <item>3+9=12</item>

    </string-array>




</resources>