<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">

    <TextView
        android:id="@+id/txtquiz"
        android:layout_width="255dp"
        android:layout_height="92dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.164" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="393dp"
        android:layout_height="311dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtquiz"
        app:layout_constraintVertical_bias="0.145">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button3"
                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/en" />

            <Button
                android:id="@+id/button2"

                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/to" />

            <Button
                android:id="@+id/button"
                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/tre" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button6"
                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/fire" />

            <Button
                android:id="@+id/button5"
                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/fem" />

            <Button
                android:id="@+id/button4"
                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/seks" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button9"
                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/syv" />

            <Button
                android:id="@+id/button8"
                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/aatte" />

            <Button
                android:id="@+id/button7"
                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/ni" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="46dp">

            <Button
                android:id="@+id/button11"
                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"

                android:text="@string/nul" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/button12"
        android:layout_width="164dp"
        android:layout_height="49dp"
        android:text="@string/regn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="0.22" />

    <EditText
        android:id="@+id/btnsvar"
        android:layout_width="83dp"
        android:layout_height="55dp"
        android:layout_marginTop="128dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.619"
        app:layout_constraintStart_toEndOf="@+id/txtquiz"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>