<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PreferanserActivity">

    <TextView
        android:id="@+id/TxtValg"
        android:layout_width="241dp"
        android:layout_height="47dp"
        android:text="@string/valgSpill"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.44" />

    <RadioGroup
        android:id="@+id/radiogroupID"
        android:layout_width="241dp"
        android:layout_height="156dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TxtValg">

        <RadioButton
            android:id="@+id/femValg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/femRegnstykker" />

        <RadioButton
            android:id="@+id/tiValg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tiRegnstykker" />

        <RadioButton
            android:id="@+id/tujefemValg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tjuefemRegnstykker" />
    </RadioGroup>

    <Button
        android:id="@+id/velgButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valgSpillB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radiogroupID" />
</androidx.constraintlayout.widget.ConstraintLayout>