<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/monkey">
    tools:context=".MainActivity">

    <Button
        android:id="@+id/start"
        android:layout_width="187dp"
        android:layout_height="69dp"
        android:text="@string/start"
        app:layout_constraintBottom_toTopOf="@+id/statistikk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.634" />

    <Button
        android:id="@+id/preferanse"
        android:layout_width="189dp"
        android:layout_height="73dp"
        android:layout_marginBottom="136dp"
        android:text="@string/preferanser"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/statistikk"
        android:layout_width="189dp"
        android:layout_height="73dp"
        android:layout_marginBottom="120dp"
        android:text="@string/statistikk"
        app:layout_constraintBottom_toTopOf="@+id/preferanse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>